left side spacing fixes

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -152,7 +152,7 @@ img#scanning {
 }
 
 #recommendations {
-    left: 145pt;
+    left: 155pt;
     position: relative;
     width: 260pt;
     padding-top: 50pt;
@@ -199,7 +199,7 @@ img#low-phone {
 
 img#review {
   margin-top: 50pt;
-  margin-left: 150pt;
+  margin-left: 170pt;
   width: 201pt;
   height: 237pt;
 }
